--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -15,8 +15,12 @@
 <a href="/about/">Sobre mi</a>
 <a href="/blog/">Blog</a>
 
-
-		<h1>Blog</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi minima, nulla molestias dolorem voluptatum eos, illo praesentium, id earum doloremque ipsum asperiores consequatur distinctio aperiam aliquam provident sapiente sint recusandae quidem voluptatem eum. Sit officia dolor expedita suscipit saepe nemo a necessitatibus non, rerum sed vel qui animi ad maiores?</p>
+<h1>Mi blog de aprendizaje sobre Astro</h1>
+<p>Aquí es donde publicaré acerca de mi viaje aprendiendo Astro./p>
+<ul>
+  <li><a href="/posts/post1/">Publicación 1</a></li>
+  <li><a href="/posts/post2/">Publicación 2</a></li>
+  <li><a href="/posts/post3/">Publicación 3</a></li>
+</ul>
 	</body>
 </html>
