--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,26 @@
 ---
+import '../styles/global.css';
+import Navigation from '../components/Navigation.astro';
+import Footer from '../components/Footer.astro';
+const pageTitle = "Sobre mi";
+const identity = {
+  firstName: "Sarah",
+  country: "Canada",
+  occupation: "Escritor técnico",
+  hobbies: ["fotografia", "observación de aves", "peñarol"],
+};
+
+const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Redacción de documentos"];
+const happy = true;
+const finished = false;
+const goal = 3;
+const operatingSystem = "Linux";
+const quantity = 3;
+const footwear = "botas";
+const student = false;
+const skillColor = "navy";
+const fontWeight = "bold";
+const textCase = "uppercase";
 
 ---
 
@@ -8,15 +30,47 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>About</title>
+		<title>{pageTitle}</title>
+		<style define:vars={{skillColor,fontWeight, textCase}}>
+			h1 {
+			  color: purple;
+			  font-size: 4rem;
+			}
+			.skill {
+            color:var(--skillColor);
+			font-weight: var(--fontWeight);
+			text-transform: var(--textCase);
+            }
+		  </style>
 	</head>
 	<body>
-        <a href="/">Inicio</a>
-<a href="/about/">Sobre mi</a>
-<a href="/blog/">Blog</a>
+		<Navigation/>
 
 
-		<h1>About</h1>
+		<h1>{pageTitle}</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi minima, nulla molestias dolorem voluptatum eos, illo praesentium, id earum doloremque ipsum asperiores consequatur distinctio aperiam aliquam provident sapiente sint recusandae quidem voluptatem eum. Sit officia dolor expedita suscipit saepe nemo a necessitatibus non, rerum sed vel qui animi ad maiores?</p>
+		<p>He aquí algunos datos sobre mí:</p>
+<ul>
+  <li>Me llamo {identity.firstName}.</li>
+  <li>Vivo en {identity.country} y trabajo como {identity.occupation}.</li>
+  {identity.hobbies.length >= 2 &&
+    <li>Dos de mis aficiones son: {identity.hobbies[0]} y {identity.hobbies[1]}</li>
+  }
+</ul>
+<p>Mis habilidades son:</p>
+<ul>
+  {skills.map((skill) => <li class="skill">{skill}</li>)}
+</ul>
+{happy && <p>¡Estoy feliz de aprender Astro!</p>}
+
+{finished && <p>¡He terminado este tutorial!</p>}
+
+{goal === 3 ? <p>Mi objetivo es terminar en 3 días.</p> : <p>Mi objetivo no son 3 días.</p>}
+
+<p>{operatingSystem}</p>
+{student && <p>Sigo estudiando.</p>}
+<p>Tengo {quantity + 8} pares de {footwear}</p>
+
+<Footer />
 	</body>
 </html>
