--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
-
+import Navigation from '../components/Navigation.astro';
+import Footer from '../components/Footer.astro';
 ---
 
 <html lang="en">
@@ -11,11 +12,10 @@
 		<title>Astro</title>
 	</head>
 	<body>
-		<a href="/">Inicio</a>
-<a href="/about/">Sobre mi</a>
-<a href="/blog/">Blog</a>
+        <Navigation />
 
 
 		<h1>Astro site</h1>
+		<Footer />
 	</body>
 </html>
