--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,6 @@
 ---
 import '../styles/global.css';
-import Navigation from '../components/Navigation.astro';
+import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 const pageTitle = "Sobre mi";
 const identity = {
@@ -44,7 +44,7 @@ const textCase = "uppercase";
 		  </style>
 	</head>
 	<body>
-		<Navigation/>
+		<Header/>
 
 
 		<h1>{pageTitle}</h1>
@@ -72,5 +72,9 @@ const textCase = "uppercase";
 <p>Tengo {quantity + 8} pares de {footwear}</p>
 
 <Footer />
+<script>
+	import "../scripts/menu.js";
+   </script>
+   
 	</body>
 </html>
