--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,6 @@
 ---
-import Navigation from '../components/Navigation.astro';
+import '../styles/global.css';
+import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 ---
 
@@ -12,7 +13,7 @@ import Footer from '../components/Footer.astro';
 		<title>Blob</title>
 	</head>
 	<body>
-		<Navigation/>
+		<Header/>
 
 <h1>Mi blog de aprendizaje sobre Astro</h1>
 <p>Aquí es donde publicaré acerca de mi viaje aprendiendo Astro./p>
@@ -22,5 +23,9 @@ import Footer from '../components/Footer.astro';
   <li><a href="/posts/post3/">Publicación 3</a></li>
 </ul>
 <Footer/>
+<script>
+	import "../scripts/menu.js";
+   </script>
+   
 	</body>
 </html>
