--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,31 +1,12 @@
 ---
-import '../styles/global.css';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
+import BaseLayout from '../layouts/BaseLayout.astro';
+import BlogPost from '../components/BlogPost.astro';
+const allPosts = await Astro.glob('../pages/posts/*.md');
+const pageTitle = "Mi blog de aprendizaje de Astro";
 ---
-
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Blob</title>
-	</head>
-	<body>
-		<Header/>
-
-<h1>Mi blog de aprendizaje sobre Astro</h1>
-<p>Aquí es donde publicaré acerca de mi viaje aprendiendo Astro./p>
-<ul>
-  <li><a href="/posts/post1/">Publicación 1</a></li>
-  <li><a href="/posts/post2/">Publicación 2</a></li>
-  <li><a href="/posts/post3/">Publicación 3</a></li>
-</ul>
-<Footer/>
-<script>
-	import "../scripts/menu.js";
-   </script>
-   
-	</body>
-</html>
+<BaseLayout pageTitle={pageTitle}>
+  <p>Aquí es donde publicaré sobre mi viaje de aprendizaje de Astro.</p>
+  <ul>
+    {allPosts.map((post) => <BlogPost url={post.url} title={post.frontmatter.title} />)}
+  </ul>
+</BaseLayout>
