--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,7 @@
 html {
-    background-color: #f1f5f9;
+    background-color:darkblue;
     font-family: sans-serif;
+    color: white;
   }
   
   body {
